--- a/doc/template/assets/mdi/package.json
+++ b/doc/template/assets/mdi/package.json
@@ -18,7 +18,7 @@
   ],
   "author": {
     "name": "Austin Andrews",
-    "url": "http://twitter.com/templarian"
+    "web": "http://twitter.com/templarian"
   },
   "licenses": [
     {
@@ -33,27 +33,5 @@
   "bugs": {
     "url": "https://github.com/Templarian/MaterialDesign/issues"
   },
-  "homepage": "http://materialdesignicons.com",
-  "gitHead": "5ef96322256d4d34afe4f5cbbaafad583c384b23",
-  "_id": "mdi@1.1.70",
-  "_shasum": "4079f0e342becd16a480838a97aa933149329206",
-  "_from": "mdi@*",
-  "_npmVersion": "2.5.1",
-  "_nodeVersion": "0.12.0",
-  "_npmUser": {
-    "name": "templarian",
-    "email": "admin@templarian.com"
-  },
-  "maintainers": [
-    {
-      "name": "templarian",
-      "email": "admin@templarian.com"
-    }
-  ],
-  "dist": {
-    "shasum": "4079f0e342becd16a480838a97aa933149329206",
-    "tarball": "http://registry.npmjs.org/mdi/-/mdi-1.1.70.tgz"
-  },
-  "directories": {},
-  "_resolved": "https://registry.npmjs.org/mdi/-/mdi-1.1.70.tgz"
+  "homepage": "http://materialdesignicons.com"
 }
