Documentation page descriptions added

--- a/doc/pages/config.json
+++ b/doc/pages/config.json
@@ -1,3 +1,4 @@
 {
-	"icon": "book-open"
+	"icon": "book-open",
+	"description": "META Doc is modern tool for generating rich documentations using Markdown or HTML with support of various visual styles and custom templates."
 }
