--- a/doc/pages/02_Usage/config.json
+++ b/doc/pages/02_Usage/config.json
@@ -1,3 +1,4 @@
 {
-	"icon": "console"
+	"icon": "console",
+	"description": "How to use META Doc as command line tool or as a JavaScript module."
 }
