--- a/doc/config.json
+++ b/doc/config.json
@@ -24,7 +24,7 @@
         "target": "_blank"
     }
   ],
-  "custom_blocks": [ "test" ],
+  "custom_blocks": [ "test", { "name": "test2", "prefix": "<div class=\"wrapper\">{", "postfix": "}</div>" } ],
   "sitemap": {
     "base_url": "http://code.meta-platform.com",
     "exclude": ["/404/"]
